# bolly

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.github/workflows/: deploy.yml  desktop-release.yml  release.yml
client/: README.md  package.json  pnpm-lock.yaml  svelte.config.js  vite.config.ts
client/src/: app.d.ts  app.html
client/src/lib/: audio-context.ts  haptics.ts  sounds.ts  tts.ts
client/src/lib/api/: client.ts  types.ts
client/src/lib/components/: ExcalidrawViewer.svelte  FileViewer.svelte  SharedScene.svelte  UpdateBanner.svelte
client/src/lib/stores/: fileviewer.svelte.ts  instances.svelte.ts  presentation.svelte.ts  scene.svelte.ts  skin.svelte.ts  toast.svelte.ts  voice.svelte.ts  websocket.svelte.ts
client/src/routes/: +layout.svelte  +page.svelte  layout.css
client/src/routes/[slug]/: +layout.svelte  +page.svelte
client/static/: orb-idle-loop.webm  video-test.html
client/static/skins/mint/: idle-loop.mov  idle-loop.webm  onboarding.mov  onboarding.webm  reading.mov  reading.webm  reborn.mov  reborn.webm  typing.mov  typing.webm
client/static/skins/orb/: morph-cube.mov  morph-prism.mov  orb-idle-loop.mov  orb-idle-loop.webm  orb-onboarding.mov  (+2 more)
desktop/: package.json  pnpm-lock.yaml
desktop/flatpak/: com.triangle_int.bolly_desktop.yml  flatpak.metainfo.xml
desktop/src/: app.css  app.html
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: computer_use.rs  computer_use_bridge.rs  lib.rs  main.rs  overlay.rs  permissions.rs  screen_recorder.rs
desktop/src/lib/: auth.svelte.ts  computer-use.ts  updater.svelte.ts
desktop/src/routes/: +layout.svelte  +layout.ts  +page.svelte
landing/: .env.example  README.md  package.json  pnpm-lock.yaml  svelte.config.js  vercel.json  vite.config.ts
landing/drizzle/: 0000_pale_rocket_raccoon.sql  0001_wet_jane_foster.sql  0002_polite_night_thrasher.sql  0003_dizzy_forge.sql  0004_strange_grim_reaper.sql  0005_minor_pet_avengers.sql  0006_dusty_chronomancer.sql  0007_cooing_texas_twister.sql  0008_abandoned_william_stryker.sql  0008_google_per_instance.sql  0009_youthful_cerebro.sql  0010_powerful_sandman.sql  0011_wandering_vengeance.sql  0012_optimal_blindfold.sql  0013_small_snowbird.sql
landing/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  0013_snapshot.json  _journal.json
landing/src/: app.css  app.d.ts  app.html  hooks.server.ts
landing/src/routes/: +layout.svelte  +layout.ts  +page.svelte
scripts/: bump-version.sh  cache-ttl-cost.py  cost-to-1m.py  daily-cost.py  install.sh  migrate-brave-key.sh  migrate-env.sh  migrate-limits.sh  migrate-memory.sh  migrate-public-url.sh  migrate-storage.sh  migrate-to-openrouter.sh  uninstall.sh  update-machines.sh
server/: Cargo.toml  config.example.toml
server/scripts/: browse.mjs  entrypoint.sh  package.json  update-bolly.sh
server/src/: cli.rs  config.rs  main.rs
server/src/app/: auth.rs  embedded_static.rs  mod.rs  router.rs  state.rs
server/src/domain/: agent_run.rs  chat.rs  child_agent.rs  config.rs  daily_stats.rs  drop.rs  events.rs  instance.rs  memory.rs  meta.rs  mod.rs  mood.rs  rhythm.rs  skill.rs  soul.rs  thought.rs  upload.rs
server/src/routes/: agents.rs  auth.rs  chat.rs  config.rs  drops.rs  google.rs  health.rs  heartbeat.rs  instances.rs  machine_agents.rs  mcp_bridge.rs  memory_import.rs  meta.rs  mod.rs  pwa.rs  skills.rs  soul.rs  thoughts.rs  tts.rs  update.rs  uploads.rs  usage.rs  ws.rs
server/src/services/: agent_runs.rs  anthropic_files.rs  anthropic_skills.rs  chat.rs  child_agents.rs  claude_cli.rs  daily_stats.rs  drops.rs  embedding.rs  google.rs  heartbeat.rs  keyword_search.rs  llm.rs  machine_registry.rs  mcp.rs  memory.rs  memory_import.rs  mod.rs  rate_limit.rs  rhythm.rs  scheduler.rs  skills.rs  soul.rs  thoughts.rs  tool.rs  tools.rs  uploads.rs  vector.rs  workspace.rs
server/src/services/llm/: agent_loop.rs  anthropic.rs  helpers.rs  mod.rs  openai.rs  types.rs
server/src/services/tools/: calendar.rs  communication.rs  companion.rs  computer.rs  drive.rs  files.rs  github.rs  image.rs  import_data.rs  media.rs  memory_tools.rs  mod.rs  project.rs  screen.rs  skills.rs  system.rs  video.rs  web.rs
(+120 files in other folders)
