[package]
name = "server"
version = "0.7.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
rig-core = "0.32.0"
rig-sqlite = "0.2.1"
rusqlite = { version = "0.32", features = ["bundled"] }
tokio-rusqlite = "0.6"
sqlite-vec = "0.1"
reqwest = "0.13"
dirs = "6.0"
toml = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
schemars = "1"
tokio-util = { version = "0.7.18", features = ["rt", "compat"] }
tower-http = { version = "0.6", features = ["fs"] }
tower = "0.5"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }
async-imap = "0.10"
async-native-tls = "0.5"
futures = "0.3"
base64 = "0.22"
regex = "1"
serde_yml = "0.0.12"
portable-pty = "0.9"
zip = "2"
