[package]
name = "server"
version = "0.10.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
rig-core = { version = "0.32.0", features = ["rmcp"] }
rmcp = { version = "0.16", features = ["client", "transport-streamable-http-client-reqwest"] }
reqwest = { version = "0.13", features = ["json", "query"] }
dirs = "6.0"
toml = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
schemars = "1"
tokio-util = { version = "0.7.18", features = ["rt", "compat"] }
tower-http = { version = "0.6", features = ["fs"] }
tower = "0.5"
futures = "0.3"
base64 = "0.22"
regex = "1"
serde_yml = "0.0.12"
portable-pty = "0.9"
zip = "2"
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres"] }
pdf-extract = "0.10.0"
