[package]
name = "server"
version = "0.15.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
rmcp = { version = "1.2", features = ["client", "transport-streamable-http-client-reqwest"] }
reqwest = { version = "0.13", features = ["json", "query", "multipart"] }
dirs = "6.0"
toml = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
schemars = "1"
tokio-util = { version = "0.7.18", features = ["rt", "compat"] }
tower-http = { version = "0.6", features = ["fs"] }
tower = "0.5"
futures = "0.3"
base64 = "0.22"
regex = "1"
serde_yml = "0.0.12"
portable-pty = "0.9"
zip = "2"
pdf-extract = "0.10.0"
chrono-tz = { version = "0.10.4", features = ["case-insensitive"] }
rust-embed = { version = "8", features = ["mime-guess"] }
lettre = { version = "0.11", default-features = false, features = ["tokio1-rustls-tls", "smtp-transport", "builder"] }
imap = "2"
native-tls = "0.2"
