[package]
name = "bolly-desktop"
version = "0.30.2"
description = "Bolly — AI companion desktop app"
authors = ["Triangle Interactive LLC"]
license = "MIT"
repository = "https://github.com/triangle-int/bolly"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bolly_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2.4.2"
url = "2.5.8"
tauri-plugin-http = "2.5.7"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
enigo = "0.3"
screenshots = "0.8.10"
base64 = "0.22.1"
image = "0.25.10"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["native-tls"] }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "native-tls"] }
futures-util = "0.3.32"
urlencoding = "2.1.3"
gethostname = "1.1.0"
dirs = "6.0.0"

